# kkamji-lab

./: .gitignore  AGENTS.md  LAST_AGENT_RUN.md  README.md  scripts
.codex/skills/blog-post-generator/: SKILL.md
.codex/skills/blog-post-generator/references/: front-matter.md
packer/eks-1.34/: README.md  build.pkr.hcl  data.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
packer/eks-1.34/scripts/: bootstrap.sh
packer/eks-1.34/tools/: verify-ami-ssm.sh
packer/eks-1.34/vars/: eks-1.34.pkrvars.hcl
scripts/: format-study-readme.sh  renumber_readme.py
scripts/domain-resource-tracer/: README.md  pyproject.toml
scripts/domain-resource-tracer/src/domain_tracer/: cli.py
skills/blog-post-generator/: SKILL.md
skills/blog-post-generator/references/: front-matter.md  repo-layout.md
skills/blog-post-generator/scripts/: convert-images-to-webp.sh
study/aws/: README.md
study/ci-cd-study/: README.md
study/ci-cd-study/1w-gitops-image-build/: README.md
study/ci-cd-study/2w-helm-and-cloud-native-ci-cd/greetings/: Chart.yaml
study/ci-cd-study/2w-helm-and-cloud-native-ci-cd/music/: Chart.yaml  values.yaml
study/ci-cd-study/2w-helm-and-cloud-native-ci-cd/pacman/: index.yaml  pacman-0.1.0.tgz
study/ci-cd-study/3w-jenkins-and-argocd/cicd-labs/: docker-compose.yaml
study/ci-cd-study/4w-1-of-3-argo-cd/ArgoCD-in-Practice/: README.md
study/ci-cd-study/5w-2-of-3-argo-cd/: argo-rollouts-application.yaml
study/ci-cd-study/5w-2-of-3-argo-cd-in-practice/: argocd-values.yaml  argocd.example.com.crt  argocd.example.com.key  argorollouts-values.yaml
study/ci-cd-study/6w-3-of-3-argocd/: argocd-values.yaml  register-cluster.sh
study/ci-cd-study/6w-3-of-3-argocd/cicd-study/: README.md
study/ci-cd-study/6w-3-of-3-argocd/nginx-chart/: values-dev.yaml  values-prd.yaml  values.yaml
study/ci-cd-study/8w-valut-sso-on-kubernetes/: .gitignore  vault-values.yaml
study/ci-cd-study/8w-valut-sso-on-kubernetes/learn-vault-secrets-operator/: .gitignore  vault-operator-values.yaml  vault-values.yaml
study/cilium-study/: README.md
study/cilium-study/helm/: README.md
study/cilium-study/helm/cilium/: .envrc  README.md  cilium-values-lab-native.yaml  cilium-values-lab-tunnel.yaml  cilium-values-local.yaml
study/cilium-study/helm/hubble/: hubble-dynamic-exporter-values.yaml  hubble-exporter-values.yaml
study/cilium-study/helm/monitoring/: README.md
study/cilium-study/install-flannel/: .envrc  README.md  flannel-values.yaml
study/cilium-study/scripts/: README.md  check-cilium-kernel-cfg.sh  rollout-restart-all.sh  setup-kubecontext.sh  setup_cilium_kernel.sh
study/cilium-study/tests/: README.md  sample_application.yaml
study/cilium-study/vagrant/: README.md
study/cilium-study/vagrant/vagrant-3w/: Vagrantfile  k8s-ctr.sh  k8s-w.sh  router.sh
study/cilium-study/vagrant/vagrant-4w/: Vagrantfile
study/cilium-study/vagrant/vagrant-5w/: Vagrantfile
study/cilium-study/vagrant/vagrant-6w/: Vagrantfile  init_cfg.sh  k8s-ctr.sh  route-add1.sh  router.sh
study/cilium-study/vagrant/vagrant-8w/: Vagrantfile
study/cilium-study/vagrant/vagrant-advanced/: README.md  Vagrantfile  k8s-ctr.sh  k8s-w.sh  wsl_setup.sh
study/cilium-study/vagrant/vagrant-original/: README.md  Vagrantfile  k8s-ctr.sh
study/istio-study/: Makefile  README.md
study/istio-study/01-install-istio/: .gitignore  README.md
study/istio-study/01-install-istio/kube-prometheus-stack/: README.md  kkamji_values.yaml
study/istio-study/01-istio-overview/: Makefile  README.md
study/istio-study/02-request-routing/: README.md  istio-cni.yaml
study/istio-study/03-fault-injection/: README.md  istio-cni.yaml
study/jenkins/: README.md
tools/domain-resource-tracer/: README.md  pyproject.toml
tools/domain-resource-tracer/src/domain_tracer/: __init__.py  aws_clients.py  cli.py  tracer.py
tools/domain-resource-tracer/tests/: test_tracer.py
tools/eks-token-cache/: README.md  eks-token-cache-manager.sh  eks-token-cache.sh
tools/gcloud-pick/: LAST_AGENT_RUN.md  README.md  pyproject.toml
tools/gcloud-pick/gcloud_pick/: __init__.py  cli.py  config.py  shell.py
tools/gcloud-pick/tests/: conftest.py  test_cli.py  test_config.py  test_shell.py
tools/git-worktree-tool/: .gitignore  README.md  pyproject.toml
tools/git-worktree-tool/tests/: test_commands.py  test_git_integration.py  test_init_behavior.py  test_remove_matching.py  test_utilities.py
tools/git-worktree-tool/wt/: __init__.py  cli.py
tools/kube-pick/: README.md  pyproject.toml
tools/kube-pick/kube_pick/: __init__.py  cli.py  config.py  shell.py
tools/kube-pick/tests/: test_config.py  test_shell.py
tools/kubeconfig-cleaner/: README.md  pyproject.toml
tools/kubeconfig-cleaner/kubeconfig_cleaner/: __init__.py  cli.py  kubeconfig.py
tools/kubeconfig-cleaner/tests/: test_kubeconfig.py
tools/kubeconfig-merger/: README.md  pyproject.toml
tools/kubeconfig-merger/kubeconfig_merger/: __init__.py  cli.py  kubeconfig.py
tools/kubeconfig-merger/tests/: test_kubeconfig.py
tools/kubectx-kubens/: README.md  kubectx-kubens.zsh
tools/markdown-fmt/: format-study-readme.sh  renumber_readme.py
tools/markdown-fmt/tests/: test_renumber.py
tools/mirror-container-images/: .gitignore  README.md  config.env.example  images.yaml  mirror-images.sh
tools/pull-request-jump/: README.md  pyproject.toml
tools/pull-request-jump/pull_request_jump/: __init__.py  cli.py
tools/pull-request-jump/tests/: test_cli.py
tools/route53-traffic-monitor/: .env.example  README.md  pyproject.toml
tools/route53-traffic-monitor/src/dns_monitor/: __init__.py  cli.py  config.py  display.py  propagation.py  resolver.py  sender.py  stats.py
tools/route53-traffic-monitor/src/r53_monitor/: aws.py  cli.py  config.py  display.py  resolver.py  stats.py
tools/route53-traffic-monitor/tests/: test_config.py  test_resolver.py  test_sender.py
tools/swagger-loadgen/: README.md  pyproject.toml
tools/swagger-loadgen/src/swagger_loadgen/: __init__.py  cli.py  config.py  parser.py  reporter.py  runner.py
tools/swagger-loadgen/tests/: test_parser.py
(+25 files in other folders)
