[project]
name = "domain-resource-tracer"
version = "0.1.0"
description = "AWS 도메인 기반 리소스 추적 도구"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "awscrt>=0.23.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.scripts]
drt = "domain_tracer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domain_tracer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
