[project]
name = "route53-traffic-monitor"
version = "0.1.0"
description = "Route53 Weighted Traffic Monitor - 가중치 설정 vs 실제 트래픽 분포 실시간 비교"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "awscrt>=0.23.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "dnspython>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
r53mon = "r53_monitor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/r53_monitor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
